# lerobot_teleoperator_inverse3

./: .gitignore  README.md  SETUP.md  pyproject.toml
src/lerobot_teleoperator_inverse3/: __init__.py  config_inverse3.py  inverse3.py
src/lerobot_teleoperator_inverse3/inverse3_bridge/: Makefile  __init__.py  inverse3_bridge.cpp
test/: test_hardware_live.py  test_teleop_mock.py
udev/: 99-haply-inverse3.rules
