[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_inverse3"
version = "0.1.0"
description = "LeRobot-compatible teleoperator for the Haption Inverse3 haptic device"
requires-python = ">=3.10"
dependencies = [
    "lerobot==0.4.4",
    "numpy",
    "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
